--- a/website/index.html
+++ b/website/index.html
@@ -44,12 +44,14 @@
             </div>
             <div class="row">
                 <div class="a">
-                    <label for="fname">Gender:</label>
+                    <label for="Gender">Gender:</label>
                 </div>
                 <div class="b">
-                    <input type="radio" name="Gender" value="Male">Male
-                    <input type="radio" name="Gender" value="Female">Female
-                    <input type="radio" name="Gender" value="Other">Other
+                   <select name="Gender" id="Gender">
+                        <option value="Male">Male</option>
+                        <option value="Female">Female</option>
+                        <option value="Other">Other</option>
+                      </select>
                 </div>
             </div>
         </div>
